[tool.poetry]
name = "random-radon-transformation"
version = "0.1.0"
description = ""
authors = ["Alina Kuznetsova"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"


numpy = "*"
opencv-python = "*"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

coverage = {extras = ["toml"], version = "^7.5.1"}
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
random-radon-transformation = "random_radon_transformation.console:main"
