[tool.poetry]
name = "random-radon-transformation"
version = "0.1.0"
description = "python iitp"
authors = ["Alina Kuznetsova"]
readme = "README.md"
packages = [{include = "random_radon_transformation", from='src'}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
numpy = "*"
opencv-python = "*"


pytest = "^8.2.1"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
numpy = "*"
opencv-python = "*"
nox = "^2024.4.15"
coverage = {extras = ["toml"], version = "^7.5.1"}
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"


flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"
xdoctest = "^1.1.3"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
random-radon-transformation = "random_radon_transformation.console:main"


[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["random_radon_transformation"]

[tool.coverage.report]
show_missing = true
fail_under = 0